Mask the $metadata trait in redfish-codegen
This trait was not providing any value--the signature of this API
endpoint is well understood, and it was not a useful abstraction.
This also has the benefit of allowing us to remove hyper as a
dependency of redfish-codegen.